--- a/public/index.html
+++ b/public/index.html
@@ -35,16 +35,12 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+		<!-- Initialize Firebase -->
+		<script src="/__/firebase/6.2.0/firebase-app.js"></script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
-
+		<!-- Add Firebase products that you want to use -->
+		<script src="/__/firebase/6.2.0/firebase-auth.js"></script>
+		<script src="/__/firebase/6.2.0/firebase-firestore.js"></script>
+	</body>
 </html>
